# rag-agent-local

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/: orchestrator.py  tools.py
app/api/: __init__.py  schemas.py
app/core/: config.py  database.py  logging.py  observability.py
app/llm/: client.py
app/rag/: chunker.py  document_parser.py  embedding.py  indexer.py  reranker.py  retriever.py
app/templates/: playground.html
data/: sample_knowledge.md
data/test_runs/run_06fbade8/chroma/: chroma.sqlite3
data/test_runs/run_2aa9bfa2/chroma/: chroma.sqlite3
data/test_runs/run_2b41f493/chroma/: chroma.sqlite3
data/test_runs/run_354d04bc/chroma/: chroma.sqlite3
data/test_runs/run_61ae47dd/chroma/: chroma.sqlite3
data/test_runs/run_6504b30b/chroma/: chroma.sqlite3
data/test_runs/run_8ace6167/chroma/: chroma.sqlite3
data/test_runs/run_a15daaec/chroma/: chroma.sqlite3
data/test_runs/run_af7ee401/chroma/: chroma.sqlite3
data/test_runs/run_b2cb6f79/chroma/: chroma.sqlite3
data/test_runs/run_c64b90ab/chroma/: chroma.sqlite3
data/test_runs/run_d8fb8d84/chroma/: chroma.sqlite3
docs/: ARCHITECTURE.md  INTERVIEW_PLAYBOOK.md
eval/: dataset.jsonl  dataset_v2.jsonl
scripts/: generate_eval_dataset.py  ingest_demo.py  interview_demo.ps1  interview_demo.py  readiness_check.py  run_eval.py
tests/: conftest.py  test_api_smoke.py
